Fix hyperlink bug and spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,7 @@ nav {
   grid-template-columns: repeat(4, 8rem);
   font-size: 1.5rem;
   justify-content: center;
+  align-content: center;
   gap: 5rem;
 }
 
@@ -43,6 +44,7 @@ main h2 {
 
 main p {
   font-size: 1.6rem;
+  margin: 2rem;
 }
 
 #home-section {
@@ -53,7 +55,7 @@ main p {
 }
 
 #home-section img {
-  width: 100%;
+  width: 95%;
   height: 100%;
   justify-self: center;
 }
@@ -83,16 +85,23 @@ main p {
 }
 .adverts p {
   font-size: 1.6rem;
+  margin: 2rem;
 }
 .adverts img {
-  width: 100%;
+  width: 95%;
   height: 100%;
+  justify-self: center;
 }
-#footer {
+
+footer {
   display: grid;
   grid-column: 1/5;
+  background-color: brown;
 }
-#contact-section {
-  display: grid;
-  background-color: rgba(178, 79, 182, 0.384);
+
+footer h2 {
+  font-size: 2.5rem;
+  justify-self: center;
+  margin: 2rem;
+  padding-bottom: 2rem;
 }
